# myu

./: Cargo.toml  README.md
src/: improved.rs  lts.rs  main.rs  mcf.rs  mu_calculus.rs  naive.rs  tests.rs
src/mu_calculus/: parser.rs
testcases/: depths1.mcf  depths2.mcf  test.aut
