[package]
name = "myu"
version = "1.0.0"
authors = ["Frank de Jong <f.j.p.d.jong@student.tue.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
ansi_term = "0.11"
atty = "0.2"
combine = {version = "4.0", features = ["regex"]}
regex = "1.3"
thiserror = "1.0"
anyhow = "1.0"
